--- a/src/app/lageplan/lageplan.page.html
+++ b/src/app/lageplan/lageplan.page.html
@@ -1,13 +1,15 @@
 <ion-header>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-title>
-        {{title}}
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      {{title}}
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
-<p>works</p>
+    <div class="container">
+      <div id="lageplan-picture"></div>
+    </div>
 </ion-content>
