--- a/src/app/lageplan/lageplan.page.html
+++ b/src/app/lageplan/lageplan.page.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-    <div class="container">
+    <div id="lageplan-container">
       <div id="lageplan-picture"></div>
     </div>
 </ion-content>
