--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -10,17 +10,18 @@
 </ion-header>
 
 <ion-content>
+  <ion-searchbar showCancelButton="focus"></ion-searchbar>
   <ion-list>
     <ion-item *ngFor="let item of items">
       <ion-label class="ion-text-wrap">
-        <h1 class="h4"> {{item.Name}}</h1>
+          <h1 class="h4"> {{item.Name}}</h1>
       	<div *ngIf="item.Produkte as ''">
           <p class="produkte"><b>Produkte:</b> {{item.Produkte}}</p>
           <p class="kategorie"><b>Kategorie:</b> {{item.Kategorie}}</p>
         </div>
       </ion-label>
       <div class="item-note" slot="end">
-        {{item.Hallenname}}
+        {{item.Halle}}
       </div>
     </ion-item>
   </ion-list>
