function which supports new design -> firstLetter

--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -14,10 +14,10 @@
   <ion-list>
     <ion-item-group *ngFor="let item of items">
       <ion-item-divider>
-        <ion-label>{{item[0][0]}}</ion-label>
+        <ion-label>{{item[0]}}</ion-label>
       </ion-item-divider>
 
-      <ion-item *ngFor="let i of item[0][1]">
+      <ion-item *ngFor="let i of item[1]">
         <ion-label class="ion-text-wrap">
           <h1 class="h4"> {{i.Name}}</h1>
           <div *ngIf="item.Produkte != ''">
