--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -13,13 +13,13 @@
 
   <ion-list>
     <ion-item-group *ngFor="let item of items">
-      <ion-item-divider>
+      <ion-item-divider id={{item[0]}}>
         <ion-label>{{item[0]}}</ion-label>
       </ion-item-divider>
 
       <ion-item *ngFor="let i of item[1]">
         <ion-label class="ion-text-wrap">
-          <h1 class="h4"> {{i.Name}}</h1>
+          <h1 class="h4">{{i.Name}}</h1>
           <div *ngIf="item.Produkte != ''">
             <p class="produkte"><b>Produkte:</b> {{i.Produkte}}</p>
             <p class="kategorie"><b>Kategorie:</b> {{i.Kategorie}}</p>
@@ -40,8 +40,11 @@
       <ion-button (click)="openActionSheet()">
         <ion-icon slot="icon-only" name="settings"></ion-icon>
       </ion-button>
+      <ion-button (click)="openJumper()">
+        <ion-icon slot="icon-only" name="jet"></ion-icon>
+      </ion-button>
     </ion-buttons>
-
+    
     <ion-buttons slot="primary">
       <ion-button (click)="ScrollToTop()">
         <ion-icon slot="icon-only" name="arrow-round-up"></ion-icon>
