design on list.page

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,7 +11,7 @@
 
 <ion-content>
 <div class="container">
-  <h1 class="h2">Herzlich Willkommen zur WIR in Dillingen 2020</h1>
+  <h1 class="h2 green">Herzlich Willkommen zur WIR in Dillingen 2020</h1>
   <h3>WIR Dillingen - der direkte Draht zu Ihrer Zielgruppe</h3>
   <p>Die Wirtschafts-, Informations- und Verkaufsausstellung WIR in Dillingen ist die Informations- und Verkaufmesse in der Region. Getragen von sechs Wirtschaftsvereinigungen im Landkreis Dillingen stellt sie eine echte Wirtschaftsplattform für den Landkreis und die Region Nordschwaben dar.</p>
   <p>Die Verbrauchermesse bietet Raum zum aktiven Mitmachen, zum Staunen, zum Einkaufen, zum Kennenlernen und Testen neuester Trends und Produkte. Sonderschauen zu zeitgemäßen Themen und ein tolles Rahmenprogramm für alle Familienmitglieder vom Kind bis zum Senior machen die WIR zum Top-Event und zum Ausflugsziel für die ganze Familie..</p>
