--- a/src/global.scss
+++ b/src/global.scss
@@ -27,3 +27,8 @@
 
 @import "./assets/css/normalize.css";
 @import "./assets/css/skeleton.css";
+
+/* green: #3d8835; */
+.green {
+    color: #3d8835;
+}
