--- a/src/assets/css/skeleton.css
+++ b/src/assets/css/skeleton.css
@@ -158,9 +158,9 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  color: #3d8835; }
 a:hover {
-  color: #0FA0CE; }
+  color: #3d8835; }
 
 
 /* Buttons
