--- a/src/app/list/list.page.scss
+++ b/src/app/list/list.page.scss
@@ -8,6 +8,7 @@ ul#scroll-nav {
 
 ul#scroll-nav li {
     padding: 2px;
+    margin-bottom: 0px;
 }
 ul#scroll-nav li:first-of-type {
     padding-left: 4px;
