--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -15,8 +15,8 @@
   
   <ion-list>
     <ion-item-group *ngFor="let item of items">
-      <ion-item-divider id={{item[0]}}>
-        <ion-label>{{item[0]}}</ion-label>
+      <ion-item-divider color="light" id={{item[0]}}>
+        <ion-label color="primary">{{item[0]}}</ion-label>
       </ion-item-divider>
 
       <ion-item *ngFor="let i of item[1]">
@@ -33,25 +33,24 @@
       </ion-item>
     </ion-item-group>
   </ion-list>
-
 </ion-content>
 
-<ion-footer>
-  <ion-toolbar>
-    <ion-buttons slot="secondary">
-      <ion-button (click)="openActionSheet()">
-        <ion-icon slot="icon-only" name="settings"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-buttons slot="primary">
-      <ion-button (click)="ScrollToTop()">
-        <ion-icon slot="icon-only" name="arrow-round-up"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <div>
-      <ul id="scroll-nav">
-        <li *ngFor="let item of items"><a href=list#{{item[0]}}>{{item[0]}}</a></li>
-      </ul>
-    </div>
-  </ion-toolbar>
+  <ion-footer>
+    <ion-toolbar color="light">
+      <ion-buttons slot="secondary">
+        <ion-button (click)="openActionSheet()">
+          <ion-icon slot="icon-only" name="settings"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <ion-buttons slot="primary">
+        <ion-button (click)="ScrollToTop()">
+          <ion-icon slot="icon-only" name="arrow-round-up"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <div>
+        <ul id="scroll-nav">
+          <li *ngFor="let item of items"><a href=list#{{item[0]}}>{{item[0]}}</a></li>
+        </ul>
+      </div>
+    </ion-toolbar>
 </ion-footer>
