--- a/src/app/list/list.page.scss
+++ b/src/app/list/list.page.scss
@@ -7,22 +7,14 @@ ul#scroll-nav {
 }
 
 ul#scroll-nav li {
-    padding: 2px;
+    padding:4px;
     margin-bottom: 0px;
 }
 ul#scroll-nav li:first-of-type {
-    padding-left: 4px;
+    margin-left: 4px;
 }
 ul#scroll-nav li:last-of-type {
-    padding-right: 4px;
-}
-ul#scroll-nav li::after {
-    content: "|";
-    padding-left: 4px;
-}
-ul#scroll-nav li:last-of-type::after {
-    content: "";
-    padding: 0px;
+    margin-right: 4px;
 }
 ul#scroll-nav li > a {
     color:#3d8835 ;
