--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -6,10 +6,9 @@
   /** primary **/
   --ion-color-primary: #3d8835;
   --ion-color-primary-rgb: 61, 136, 53;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #36782f
-  ;
+  --ion-color-primary-contrast: #eeeeee;
+  --ion-color-primary-contrast-rgb: 238, 238, 238;
+  --ion-color-primary-shade: #36782f;
   --ion-color-primary-tint: #509449;
 
   /** secondary **/
