first code and design changes

--- a/src/app/programm/programm.page.html
+++ b/src/app/programm/programm.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content [scrollEvents]="true">
-  <div id="akkordion">
+  <div id="accordion-container">
     <button id="programm-1" class="accordion" (click)="Akkordion('programm-1')">Section 1</button>
     <div class="panel">
       <p>Lorem ipsum...</p>
