--- a/src/app/programm/programm.page.scss
+++ b/src/app/programm/programm.page.scss
@@ -1,7 +1,7 @@
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-    background-color: #eee;
-    color: #444;
+    background-color: #f4f5f8;
+    color: #3d8835;
     cursor: pointer;
     padding: 18px;
     width: 100%;
@@ -13,7 +13,7 @@
   
   /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
   .active, .accordion:hover {
-    background-color: #ccc;
+    background-color: #eee;
   }
   
   /* Style the accordion panel. Note: hidden by default */
