--- a/src/app/programm/programm.page.scss
+++ b/src/app/programm/programm.page.scss
@@ -38,6 +38,9 @@
     content: "\2796"; /* Unicode character for "minus" sign (-) */
   }
 
+  h2{
+    margin: 0.5rem 0 0.5rem 0;
+  }
   .programm-thema-heading{
     font-size: 1.75rem;
     color: black;
