images + content added

--- a/src/app/themenplakate/themenplakate.page.html
+++ b/src/app/themenplakate/themenplakate.page.html
@@ -10,25 +10,60 @@
 </ion-header>
 
 <ion-content>
-    <ion-slides scrollbar="true" [options]="slideOpts">
+  <ion-slides scrollbar="true" [options]="slideOpts">
     <ion-slide>
       <div class="slide-container">
-        <img src="../../assets/themenplakate/WIR Gunzenhausen 2019 Wir sind dabei Plakat.jpg">
+        <img src="../../assets/themenplakate/19035_JWS_Dill_2020_09_Sie_kommt_RZ01.jpg">
         <div class="container">
-          <h3>Wir sind dabei!</h3>
-          <p>Über 250 Aussteller aus der Region.</p>
+          <p><b>Liebe Mitbürger*innen aus Dillingen und Umgebung, </b><br>
+            unsere Wahlempfehlung ist ganz eindeutig Qualitätsprodukte und Dienstleistungen aus der Region! Vom <b>
+              4. bis 8. März
+            </b> öffnet die <b>WIR</b> auf dem Festplatz Donaupark in Dillingen ihre Pforten. Verbringen Sie einen
+            unvergesslichen Tag auf der Wirtschafts-, Informations- und Regionalausstellung!
+          </p>
         </div>
       </div>
     </ion-slide>
     <ion-slide>
       <div class="slide-container">
-        <img src="../../assets/themenplakate/WIR Gunzenhausen 2019 Themenplakat Genuss.jpg">
-        <h3>Genuss!</h3>
+        <img src="../../assets/themenplakate/19035_JWS_WIR Dill 2020 12 Tp Fun 03_1b.jpg">
+        <div class="container">
+          <p>Auf der WIR ist ordentlich was los!<br>
+            Viele Outdoor- und Indoor-Aktivitäten zum Ausprobieren. Für Groß und Klein ist etwas dabei. </p>
+        </div>
       </div>
     </ion-slide>
- <!--    <ion-slide>
-      <h1>Mobilität!</h1>
-      <img src="../../assets/themenplakate/WIR Gunzenhausen 2019 Themenplakat Mobilität.jpg">
-    </ion-slide> -->
+    <ion-slide>
+      <div class="slide-container">
+        <img src="../../assets/themenplakate/19035_JWS_WIR_Dill_2020_12_Tp_Handwerker_01_a.jpg">
+        <div class="container">
+          <p><b>Clever Bauen und Sparen</b><br>
+            Wer heute ein Haus baut, renoviert oder saniert steht vor vielen Fragen: Für welche Heizform, welche
+            Dämmung, welche Fenster entscheide ich mich? Wie „intelligent“ soll mein Haus sein? Was auch immer Sie zum
+            Thema Haus- bau und Energieeffizienz suchen, auf der WIR werden Sie fündig!</p>
+        </div>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <div class="slide-container">
+        <img src="../../assets/themenplakate/19035_JWS_WIR_Dill_2020_12_Tp_Holz_RZ_29-01-20.jpg">
+        <div class="container">
+          <p><b>Folgen Sie dem Ruf der Natur!</b><br>
+            Unter diesem Motto findet während der WIR in Dillingen eine Sonderausstellung zum
+            Innovations- und Nachhaltigkeitsprodukt Holz statt. Fühlen, riechen und bestaunen Sie Möglichkeiten,
+            die dieser Rohstoff bietet!</p>
+        </div>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <div class="slide-container">
+        <img src="../../assets/themenplakate/19035_JWS_WIR_Dill_2020_12_Tp_bewegen_RZ_ansicht.jpg">
+        <div class="container">
+          <p>Die regelmäßige Bewegung ist das A und O für ein gesundes und langes Leben. Die Aktion „MENSCHEN BEWEGEN“
+            bietet auf der WIR viele Angebote, um aktiv zu werden. Testen Sie Ihr Körpergefühl auf dem Balance-Board,
+            Handbike oder Fahrrad-Ergometer.</p>
+        </div>
+      </div>
+    </ion-slide>
   </ion-slides>
 </ion-content>
