--- a/src/app/themenplakate/themenplakate.page.scss
+++ b/src/app/themenplakate/themenplakate.page.scss
@@ -1,10 +1,14 @@
 div.slide-container{
     height: calc(100vh - 48px);
+    overflow: scroll;
 }
 div.slide-container img{
     height: auto;
     width: 90%;
 }
-div.container{
+
+p{
+    font-size: 1.25rem;
+    hyphens: auto;
     text-align: left;
 }
