--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,8 +11,8 @@
 
 <ion-content>
   <div class="container">
-    <h1 class="h2" color="primary">Herzlich Willkommen zur WIR in Dillingen 2020</h1>
-    <h2 class="h3">WIR Dillingen - der direkte Draht zu Ihrer Zielgruppe</h2>
+    <h1 class="h2 green">Herzlich Willkommen zur WIR in Dillingen 2020</h1>
+    <h2 class="h3">WIR Dillingen - Raum zum Entdecken</h2>
     <p>Die Wirtschafts-, Informations- und Verkaufsausstellung WIR in Dillingen ist die Informations- und Verkaufmesse
       in der Region. Getragen von sechs Wirtschaftsvereinigungen im Landkreis Dillingen stellt sie eine echte
       Wirtschaftsplattform für den Landkreis und die Region Nordschwaben dar.</p>
@@ -20,32 +20,24 @@
       neuester Trends und Produkte. Sonderschauen zu zeitgemäßen Themen und ein tolles Rahmenprogramm für alle
       Familienmitglieder vom Kind bis zum Senior machen die WIR zum Top-Event und zum Ausflugsziel für die ganze
       Familie..</p>
-    <h3>Programm-Highlights</h3>
+    <h3 class="green">Highlights</h3>
     <ion-list id="programm-highlights">
       <ion-item>
         <ion-label>
-          <span><b>Ist Dachau noch bezahlbar?</b></span>
-          <p>25. Oktober, 13 Uhr – Halle E</p>
+          <span><b>Menschen Bewegen</b></span>
+          <p>Die große Gesundheitsaktion</p>
         </ion-label>
       </ion-item>
       <ion-item>
         <ion-label>
-          <span><b>Fridays for Future – Klimaschutz ist in aller Munde</b></span>
-          <p>Diskussion mit Landrat Löwl</p>
-          <p>25. Oktober, 16 Uhr – Halle E</p>
+          <span><b>Die beste Wahl: Kauf Regional</b></span>
+          <p>Regionale Produkte und regionale Dienstleister</p>
         </ion-label>
       </ion-item>
       <ion-item>
         <ion-label>
-          <span><b>DACHAUER LAND: Bienentag</b></span>
-          <p>Imker informieren: Waben, Bienenschaukästen, Schleuder, Kerzenherstellung – mit Quiz</p>
-          <p>26. Oktober, ganztägig – Halle E</p>
-        </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>
-          <span><b>JUMPAGNES – Tanzgruppe des TSV Eintr. Karlsfeld</b></span>
-          <p>27. Oktober, 13 Uhr – Halle H</p>
+          <span><b>NO FUN NO WIR</b></span>
+          <p>Auf der WIR Neues Erleben und Entdecken, was das Herz begehrt!</p>
         </ion-label>
       </ion-item>
     </ion-list>
