content and design changes

--- a/src/app/programm/programm.page.scss
+++ b/src/app/programm/programm.page.scss
@@ -1,58 +1,61 @@
 /* Style the buttons that are used to open and close the accordion panel */
-.accordion {
-    background-color: #f4f5f8;
-    color: #3d8835;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.4s;
-  }
-  
-  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-  .active, .accordion:hover {
-    background-color: #eee;
-  }
-  
-  /* Style the accordion panel. Note: hidden by default */
-  .panel {
-    padding: 0 18px;
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-    hyphens: auto;
-  }
+button.accordion {
+  background-color: #f4f5f8;
+  color: #3d8835;
+  padding: 18px;
+  width: 100%;
+  transition: 0.2s;
+}
 
-  .accordion:after {
-    content: '\02795'; /* Unicode character for "plus" sign (+) */
-    font-size: 13px;
-    color: #777;
-    float: right;
-    margin-left: 5px;
-  }
-  
-  .active:after {
-    content: "\2796"; /* Unicode character for "minus" sign (-) */
-  }
+button.active {
+  background-color: #eee;
+}
 
-  h2{
-    margin: 0.5rem 0 0.5rem 0;
-  }
-  .programm-thema-heading{
-    font-size: 1.75rem;
-    color: black;
-    margin-bottom: 0.5rem;
-  }
- p.aussteller{
-   margin-bottom: 0.5rem;
- }
- p.ort-zeit{
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.6s ease-in-out;
+  hyphens: auto;
+}
+
+button>span:after {
+  content: '\02795';
+  /* + */
+  font-size: 13px;
+  color: #777;
+  float: right;
+  margin-left: 5px;
+}
+
+button.active>span:after {
+  content: "\2796";
+  /* - */
+}
+
+h2 {
+  margin: 0.5rem 0 0.5rem 0;
+}
+
+.programm-thema-heading {
+  font-size: 1.75rem;
+  color: black;
+  margin-bottom: 0.5rem;
+}
+
+p.aussteller {
+  margin-bottom: 0.5rem;
+}
+
+p.ort-zeit {
   font-size: 1.2rem;
- }
- button>span{
+}
+
+button > span {
+  display: block;
+  text-align: left;
   padding-right: 70px;
   white-space: break-spaces;
- }
+}
