changed filename and directory - aussteller

--- a/src/app/aussteller/aussteller.page.html
+++ b/src/app/aussteller/aussteller.page.html
@@ -46,7 +46,7 @@
       </ion-buttons>
       <div>
         <ul id="scroll-nav">
-          <li *ngFor="let item of items"><a href=list#{{item[0]}}>{{item[0]}}</a></li>
+          <li *ngFor="let item of items"><a href=aussteller#{{item[0]}}>{{item[0]}}</a></li>
         </ul>
       </div>
     </ion-toolbar>
