--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,17 +10,19 @@
 </ion-header>
 
 <ion-content>
+  
   <div class="container">
     <h1 class="h2 green">Herzlich Willkommen zur WIR in Dillingen 2020</h1>
-    <h2 class="h3">WIR Dillingen - Raum zum Entdecken</h2>
+    <img src="../../assets/img/17068_JWS_WIR_Dillingen_2018_13_Footer_wir-sind-dabei2.jpg">
+    <strong>WIR Dillingen - Raum zum Entdecken</strong>
     <p>Die Wirtschafts-, Informations- und Verkaufsausstellung WIR in Dillingen ist die Informations- und Verkaufmesse
       in der Region. Getragen von sechs Wirtschaftsvereinigungen im Landkreis Dillingen stellt sie eine echte
       Wirtschaftsplattform für den Landkreis und die Region Nordschwaben dar.</p>
     <p>Die Verbrauchermesse bietet Raum zum aktiven Mitmachen, zum Staunen, zum Einkaufen, zum Kennenlernen und Testen
       neuester Trends und Produkte. Sonderschauen zu zeitgemäßen Themen und ein tolles Rahmenprogramm für alle
       Familienmitglieder vom Kind bis zum Senior machen die WIR zum Top-Event und zum Ausflugsziel für die ganze
-      Familie..</p>
-    <h3 class="green">Highlights</h3>
+      Familie.</p>
+    <h3>Highlights</h3>
     <ion-list id="programm-highlights">
       <ion-item>
         <ion-label>
@@ -42,7 +44,7 @@
       </ion-item>
     </ion-list>
     <h3>Anfahrt</h3>
-    <h4>Festplatz Donaupark</h4>
+    <strong>Festplatz Donaupark</strong>
     <p>Christastraße <br>
       89407 Dillingen a.d. Donau <br>
       <a href="https://goo.gl/maps/grTSTVVVjNZMzFrC8">Google POI</a></p>
