--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,10 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-header>
         <ion-toolbar>
-          <ion-title>Menu</ion-title>
+            <div id="logo-container">
+                <ion-title>Menu</ion-title>
+              <img id="logo" src="../assets/img/WIR Dillingen 2020 Logo.png">
+            </div>
         </ion-toolbar>
       </ion-header>
       <ion-content>
