--- a/src/app/eintrittspreise/eintrittspreise.page.html
+++ b/src/app/eintrittspreise/eintrittspreise.page.html
@@ -11,7 +11,7 @@
 
 <ion-content>
   <div class="container">
-    <h1 class="h3">Tageskarten</h1>
+    <h3>Tageskarten</h3>
     <ion-item *ngFor="let i of preise">
       <ion-label class="ion-text-wrap">
         <p class="art"><b>{{i.Art}}</b></p>
@@ -19,7 +19,7 @@
       </ion-label>
     </ion-item>
 
-    <h1 class="h3">Die WIR in Dillingen 2020 erleben und sparen:</h1>
+    <h3>Die WIR in Dillingen 2020 erleben und sparen:</h3>
     <ion-item *ngFor="let i of sparen">
       <ion-label class="ion-text-wrap">
         <p class="art"><b>{{i.Art}}</b></p>
@@ -27,7 +27,7 @@
       </ion-label>
     </ion-item>
 
-    <h1 class="h4 green">Dauerkarte zum Aufpreis von 2€</h1>
+    <h4 class="green">Dauerkarte zum Aufpreis von 2€</h4>
       <p>Die WIR-Dauerkarte berechtigt zum permanenten Besuch der WIR Dillingen, täglich von 10 bis 18 Uhr und gilt nur für Personen, nicht für Gruppen.</p>
   </div>
 </ion-content>
