--- a/src/app/programm/programm.page.html
+++ b/src/app/programm/programm.page.html
@@ -10,11 +10,12 @@
 </ion-header>
 
 <ion-content [scrollEvents]="true">
-    <div class="container">
-        <h2 class="h4">Alle Aktion in der Übersicht!</h2>
-      </div>
+  <div class="container">
+    <h3>Alle Aktion in der Übersicht!</h3>
+  </div>
   <div class="accordion-container" *ngFor="let item of programm; let id = index;">
-    <button id=programm-{{id}} class="accordion" (click)="callAkkordion('programm-'+id)"><span>{{item[0]}}</span></button>
+    <button id=programm-{{id}} class="accordion"
+      (click)="callAkkordion('programm-'+id)"><span>{{item[0]}}</span></button>
     <div class="panel">
       <ion-item *ngFor="let i of item[1]">
         <ion-label class="ion-text-wrap">
@@ -31,9 +32,8 @@
     </div>
   </div>
   <div class="container">
-      <p>Änderungen und Ergänzungen vorbehalten!</p>
-    </div>
-
+    <p>Änderungen und Ergänzungen vorbehalten!</p>
+  </div>
 </ion-content>
 
 <ion-footer>
